--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
           <!-- Teaser image -->
           <figure class="image">
-            <img src="static/images/SFFL.pdf"
+            <img src="static/images/SFFL.svg"
                 alt="Teaser image for Separate First, Fuse Later">
           </figure>
 
